--- a/Web/pagestyle.css
+++ b/Web/pagestyle.css
@@ -11,3 +11,10 @@ div#title{
 div#SocialMediaBoxRow{
   text-align: center;
 }
+
+
+/* Card UI */
+.card {
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
