--- a/Web/pagestyle.css
+++ b/Web/pagestyle.css
@@ -10,6 +10,11 @@ div#title{
 
 div#SocialMediaBox{
   text-align: center;
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+
 }
 
 div#MobileBox{
@@ -21,4 +26,5 @@ div#MobileBox{
 .card {
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      padding: 30px, 30px, 30px, 30px;
 }
