--- a/Web/pagestyle.css
+++ b/Web/pagestyle.css
@@ -6,12 +6,34 @@ div#NavigationBarContainer{
 
 div#title{
   text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
 div#SocialMediaBox{
   text-align: center;
+  padding-top: 70px;
+  padding-right: 150px;
+  padding-bottom: 70px;
+  padding-left: 150px;
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+
 }
 
 div#MobileBox{
   text-align: center;
+  padding-top: 70px;
+  padding-right: 150px;
+  padding-bottom: 70px;
+  padding-left: 150px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+
+}
+
+
+/* Card UI */
+.card {
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
