worked on google maps and working on EC2 instance

--- a/Web/pagestyle.css
+++ b/Web/pagestyle.css
@@ -31,6 +31,18 @@ div#MobileBox{
 
 }
 
+  #container {
+    display: flex;
+    justify-content: space-between;
+}
+
+  #map{
+    order: 2;
+    align-self: center;
+    height: 50%;
+    width: 100%;
+  }
+
 
 /* Card UI */
 .card {
